--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
       <svg class="footer-icon">
         <use href="/src/images/icons.svg#icon-Vector"></use>
       </svg>
-      <p class="footer__text js-modal__team">by GoIT Students</p>
+      <p class="footer__text js-team-modal__open">by GoIT Students</p>
     </div>
   </div>
 </footer>
