--- a/src/partials/index-header.html
+++ b/src/partials/index-header.html
@@ -15,7 +15,7 @@
             <a class="page-nav__link home current" href="./index.html"></a>
           </li>
           <li class="page-nav__item">
-            <a class="page-nav__link library" href="./library.html"
+            <a class="page-nav__link library js-library" href="./library.html"
               >My library</a
             >
           </li>
