--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -73,7 +73,7 @@
 
 @media screen and (max-width: 1279px) {
   .slider__btn {
-    height: 198px;
+    height: 204px;
   }
 }
 
@@ -81,7 +81,7 @@
   position: absolute;
   border-radius: 40px;
   border: 2px solid #fff;
-  background-color: #00000075;
+  background-color: #000000;
   width: 80px;
   height: 80px;
   transition: all 0.3s ease-in-out;
