--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -17,6 +17,7 @@
 }
 
 .library-header {
+  position: relative;
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url(../images/header-2-mobile.jpg);
 }
@@ -172,6 +173,10 @@
     line-height: 35px;
     color: #ffffff;
   }
+  .page-header__logo-title:hover,
+  .page-header__logo-title:focus {
+    color: #ff6b08;
+  }
 
   .form-input {
     width: 336px;
@@ -221,4 +226,10 @@
 .library-header-notification {
   background-color: #000000;
   background-image: none;
+}
+.home:hover,
+.library:hover,
+.home:focus,
+.library:focus {
+  color: #ff6b08;
 }
