--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,10 @@
 @import './modal-window';
 @import './libart';
 @import './loader.scss';
+
+@import './team-modal-window.scss';
+
 @import './theme-change';
 @import './btn-up.scss';
 @import './lang-switch';
+
