--- a/src/partials/index-main.html
+++ b/src/partials/index-main.html
@@ -1,7 +1,17 @@
 <div class="container">
   <div class="preloader__position">
-    <div class="preloader">
-      <div class="lds-roller">
+    <div class="preloader light-theme">
+      <div class="lds-roller__light light-theme">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="lds-roller__dark light-theme">
         <div></div>
         <div></div>
         <div></div>
@@ -15,7 +25,8 @@
     <ul class="card"></ul>
   </div>
   <ul class="js-pagination"></ul>
-  <button class="btn-up btn show" type="button">
+  <button class="btn-up btn show"
+          type="button">
     <svg class="up-icon icon">
       <use href="./images/svg-sprite.svg#icon-go-up"></use>
     </svg>
