--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -42,10 +42,10 @@
         />
         <label class="theme__control theme__control-lib" for="toggler"></label>
         <svg class="theme__icon">
-          <use href="./images/icons.svg#icon-moon"></use>
+          <use class="theme__icon-lib" href="./images/icons.svg#icon-moon"></use>
         </svg>
         <svg class="theme__icon theme__icon-sun">
-          <use href="./images/icons.svg#icon-sun"></use>
+          <use class="theme__icon-lib" href="./images/icons.svg#icon-sun"></use>
         </svg>
       </div>
     </div>
