--- a/src/sass/team-modal-window.scss
+++ b/src/sass/team-modal-window.scss
@@ -1,10 +1,12 @@
 .js-team__modal-backdrop {
+  overflow-y: auto;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(105, 104, 104, 0.329);
+  background-color: rgba(0, 0, 0, 0.8);
+  
 }
 
 .js-team-modal__close {
@@ -20,7 +22,7 @@
 }
 
 .modal-close-btn__icon {
-  fill: black;
+  color: #ff6b08;
   width: 20px;
   height: 20px;
   margin: auto;
@@ -28,33 +30,81 @@
 
 .js-team {
   display: flex;
+  padding: 10px;
+  border-radius: 5px;
   flex-wrap: wrap;
   row-gap: 10px;
   column-gap: 10px;
   margin: 0;
-  padding: 10;
   position: absolute;
-  top: 50%;
+  top: 20px;
   left: 50%;
-  background-color: #fff;
-  transform: translate(-50%, -50%);
+  background-color: #ff6b08;
+  // opacity: 0.5;
+  transform: translate(-50%, 0%);
+}
 
-  &__member {
-    background-color: aquamarine;
-    height: 100px;
-    width: 100%;
+.team-member {
+  border-radius: 7px;
+  background-color: black;
+
+  &__photo {
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+
+  &__name {
+    padding-left: 10px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    color: white;
+  }
+
+  &__rol {
+    padding-left: 10px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #ff6b08;
+  }
+
+  &__github-link {
+    color: white;
+    text-decoration: underline;
+    margin: auto;
+  }
+
+  &__linkedin-link {
+    color: rgb(0, 102, 255);
+    text-decoration: underline;
+    margin: auto;
   }
 }
+
+.team-member-card__footer {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+}
+
+.team-member:hover {
+  scale: 1.1;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
+}
+
 //----- для планшета
 
 @media screen and (min-width: 768px) {
   .js-team {
     width: 704px;
+    transform: translate(-50%, 0%);
+  }
 
-    &__member {
-      background-color: aquamarine;
-      width: calc((100% - 10px) / 2);
-    }
+  .team-member {
+    width: calc((100% - 10px) / 2);
   }
 }
 
@@ -63,10 +113,11 @@
 @media screen and (min-width: 1280px) {
   .js-team {
     width: 1280px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-    &__member {
-      background-color: aquamarine;
-      width: calc((100% - 20px) / 3);
-    }
+  .team-member {
+    width: calc((100% - 40px) / 5);
   }
 }
