--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,10 +1,9 @@
 <div class="js-team__modal-backdrop" hidden>
   <ul class="js-team list">
-    <li>
-      <!-- <img src="./images/Anastasiya.jpg" alt=""> -->
-    </li>
+        <!-- розмітка через js -->
   </ul>
   <button type="button" class="js-team-modal__close">
     <img src="./images/close-icon.png" alt="close icon" class="modal-close-btn__icon" />
   </button>
 </div>
+<img src="../images/github-icon.png"
